--- a/EnterDrawApp.Tests/EnterDrawApp.Tests.csproj
+++ b/EnterDrawApp.Tests/EnterDrawApp.Tests.csproj
@@ -136,6 +136,12 @@
     <PackageReference Include="NUnit">
       <Version>3.9.0</Version>
     </PackageReference>
+    <PackageReference Include="NUnit3TestAdapter">
+      <Version>3.9.0</Version>
+    </PackageReference>
+    <PackageReference Include="NUnitTestAdapter">
+      <Version>2.1.1</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\filePersistence.csproj">
@@ -146,6 +152,9 @@
       <Project>{793aa6e3-efc4-40ab-8e59-0d52a690e3ea}</Project>
       <Name>EnterDrawApp</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
