--- a/EnterDrawApp/EnterDrawApp.csproj
+++ b/EnterDrawApp/EnterDrawApp.csproj
@@ -96,6 +96,8 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
+    <Compile Include="EntryData.cs" />
+    <Compile Include="DataValidationExceptions.cs" />
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
