--- a/EnterDrawApp/EnterDrawApp.csproj
+++ b/EnterDrawApp/EnterDrawApp.csproj
@@ -101,7 +101,10 @@
     <Compile Include="MainPage.xaml.cs">
       <DependentUpon>MainPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="MainPageEventMethods.cs" />
+    <Compile Include="MainPagePrivateMethods.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SerialNumbers.cs" />
   </ItemGroup>
   <ItemGroup>
     <AppxManifest Include="Package.appxmanifest">
