Deleted leftover files and folders, changed library name

--- a/DataPersistenceLib/DataPersistenceLib.csproj
+++ b/DataPersistenceLib/DataPersistenceLib.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{DB68F03E-B486-4454-9DFF-665C8CD1980B}</ProjectGuid>
+    <ProjectGuid>{C6EBDD7E-3C58-46E9-9021-1A1091ACC951}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DataValidationLib</RootNamespace>
-    <AssemblyName>DataValidationLib</AssemblyName>
+    <RootNamespace>DataPersistenceLib</RootNamespace>
+    <AssemblyName>DataPersistenceLib</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <TargetPlatformIdentifier>UAP</TargetPlatformIdentifier>
     <TargetPlatformVersion Condition=" '$(TargetPlatformVersion)' == '' ">10.0.15063.0</TargetPlatformVersion>
@@ -106,13 +106,12 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Properties\DataValidationLib.rd.xml" />
+    <EmbeddedResource Include="Properties\DataPersistenceLib.rd.xml" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NETCore.UniversalWindowsPlatform">
-      <Version>5.4.0</Version>
+      <Version>6.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
