--- a/DataPersistenceLib/DataPersistenceLib.csproj
+++ b/DataPersistenceLib/DataPersistenceLib.csproj
@@ -106,6 +106,7 @@
     <RestoreProjectStyle>PackageReference</RestoreProjectStyle>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="DataPersistence.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Properties\DataPersistenceLib.rd.xml" />
   </ItemGroup>
