--- a/EnterDrawApp/EnterDrawApp.csproj
+++ b/EnterDrawApp/EnterDrawApp.csproj
@@ -139,6 +139,12 @@
       <Version>5.4.0</Version>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DataPersistenceLib\DataPersistenceLib.csproj">
+      <Project>{c6ebdd7e-3c58-46e9-9021-1a1091acc951}</Project>
+      <Name>DataPersistenceLib</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup Condition=" '$(VisualStudioVersion)' == '' or '$(VisualStudioVersion)' &lt; '14.0' ">
     <VisualStudioVersion>14.0</VisualStudioVersion>
   </PropertyGroup>
